replaced images, round of changes

--- a/letter.html
+++ b/letter.html
@@ -7,7 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="manifest.json">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="style/normalize.css">
         <link rel="stylesheet" href="style/style.css">
@@ -23,13 +28,13 @@
 
         <main>
             <img alt='' id='letter-from-kendra' src='assets/letterfromkendra@2x.png'>
-            <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.png' srcset='assets/img-letter.jpg 689w, assets/img-letter@2x.jpg 1378w, assets/img-letter@3x.jpg 2067w'>
+            <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.png' srcset='assets/img-letter.png 689w, assets/img-letter@2x.png 1378w'>
 
             <h5 class='copy--20--bebas shrinkable'>LAST YEAR, WE PLANNED. THIS YEAR, WE EXECUTED.</h5>
             <div class='w666'>
                 <p class='copy--20--futura'>As we move through our second decade, 826CHI is guided by the vision set forth in our 2020 strategic plan. After months of visioning, dreaming, and many rounds of revision, we are confident that this three-year plan will lead 826CHI forward, amplifying Chicago’s bright young voices in neighborhoods across our great city.</p>
                 <p class='copy--20--futura'>The political climate of the year has had a profound effect on the work that we do and the communities we serve. In the midst of political upheaval, Chicago Public Schools had its own troubles. Millions of dollars in budget cuts were announced at the beginning and middle of the school year. These events made us reexamine the ways we can support Chicago students.</p>
-                <p class='copy--20--futura'>We listened closely to our community of students, parents, teachers, and volunteers, weaving new elements of support and engagement into our work. We held community info sessions on immigrant rights. We established a bus transportation fund to reimburse schools unable to afford bussing students to our writing center for programs. We built stronger partnerships with organizations working in neighborhoods across the city. We deepened our commitment to  providing English Language Learners, low-income families, and under-resourced schools fair access to high-quality arts education. We expanded our team through hiring additional AmeriCorps VISTAs and staff, and by launching our first Teaching Artist cohort. Through these and a myriad of future-focused decisions, our capacity to serve students and build community increased measurably.</p>
+                <p class='copy--20--futura'>We listened closely to our community of students, parents, teachers, and volunteers, weaving new elements of support and engagement into our work. We held community information sessions on immigrant rights. We established a transportation fund to reimburse schools unable to afford bussing students to our writing center for programs. We built stronger partnerships with organizations working in neighborhoods across the city. We deepened our commitment to providing English Language Learners, low-income families, and under-resourced schools fair access to high-quality arts education. We expanded our team through hiring additional AmeriCorps VISTAs and staff, and by launching our first Teaching Artist cohort. Through these and a myriad of future-focused decisions, our capacity to serve students and build community increased measurably.</p>
                 <p class='copy--20--futura'>This year of building has equipped 826CHI with clearly defined vision and a renewed commitment to arts education equity; we move into the new school year aiming to serve 55% more students while strengthening our relationships across Chicago. Planning for expansion is no longer a daydream, it’s a tangible next step forward.</p>
                 <p class='copy--20--futura'>No one can predict the future of our schools, our city or our country. What we do know is that the 826CHI community will always stand up for Chicago students, their incredible stories, and their right to tell them proudly and boldly.</p>
                 <p class='copy--20--futura'>For that, we remain deeply grateful.</p>
