--- a/programs.html
+++ b/programs.html
@@ -7,7 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="manifest.json">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="style/normalize.css">
         <link rel="stylesheet" href="style/style.css">
@@ -24,10 +29,11 @@
         <main>
         	<div class='bg--blue'>
         		<img alt='' class='shrinkable' id='title__programs' src='assets/programs@2x.png'>
-            	<p class='copy--20--futura w666'>826CHI offers free, year-round distinctive writing programs for Chicago students. Our After School Tutoring &amp; Writing, Field Trips, Workshops and In-Schools programs engaged  2,507 students from 53 zipcodes across the city. We are committed to bridging gaps in access to high-quality art education across Chicago by prioritizing English language learners and students attending under-resourced schools. We believe that all students should have the opportunity to gain new insights and confidence in the power of their voices.</p>
+            	<p class='copy--20--futura w666'>826CHI offers free, year-round distinctive writing programs for Chicago students. Our After-School Tutoring &amp; Writing, Field Trips, Workshops and In-Schools programs engaged 2,507 students from 53 zip codes across the city. We are committed to bridging gaps in access to high-quality art education across Chicago by prioritizing English language learners and students attending under-resourced schools. We believe that all students should have the opportunity to gain new insights and confidence in the power of their voices.</p>
             </div>
             <section class='programs__program' id='astw'>
             	<img alt='' class='programs__program__title shrinkable' src='assets/astw@2x.png'>
+              <img alt='' class='programs__program__title mobile shrinkable' src='assets/astw-mobile@2x.png'>
             	<p class='copy--20--futura text--green w570 programs__program__statistic'>100% of parents said that finishing schoolwork at 826 allowed their child to spend more quality time with family.</p>
             	<div class='number-items-boxes'>
             		<div class='number-items-box'>
@@ -47,7 +53,7 @@
                 	<img alt='' src='assets/img-afterschooltutoring@2x.jpg'>
                     <div class='number-items-boxes--mobile'>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--big--numbers copy--big--numbers--startswithone'>125</div>
                             <div class='copy--20--futura'>sessions</div>
                         </div>
                         <div class='number-items-box'>
@@ -59,7 +65,7 @@
                             <div class='copy--20--futura'>schools</div>
                         </div>
                     </div>
-                	<p class='copy--16--bookmania'>From September to June, afternoons at our writing center are filled with students prepared to dive into writing prompts, finish their homework, and do some hula-hooping as a reward. Our faithful cohort of tutors are always on hand to help students with math homework and help them revise their writing. We launched the second year of our Speakers and Snacks program, where guests attend 45-minute Q&amp;A session from our students about their professions. Speakers this year included a sports commentator, professor and dog trainer. This year ASTW published two chapbooks and one audio project, all of which had individual community readings. For the final chapbook release, we were thrilled to integrate physical movement into the students’ readings, courtesy of a partnership with the Dancers Awareness project (DAP).</p>
+                	<p class='copy--16--bookmania'>From September to June, afternoons at our writing center are filled with students prepared to dive into writing prompts, finish their homework, and do some hula-hooping as a reward. Our faithful cohort of tutors are always on hand to help students with math homework and help them revise their writing. We launched the second year of our Speakers and Snacks program, where guests attend 45-minute Q&amp;A session from our students about their professions. Speakers this year included a sports commentator, professor, and dog trainer. This year ASTW published two chapbooks and one audio project, all of which had individual community readings. For the final chapbook release, we were thrilled to integrate physical movement into the students’ readings, courtesy of a partnership with the Dancers Awareness Project (DAP).</p>
                 </div>
                 <blockquote class='text--green w557'>
                 	<p class='copy--20--futura text--green'>“826 provides my children exposure to a different demographic where they meet new friends (and get to socialize also) from different backgrounds and practice writing skills in a fun way.”</p>
@@ -87,19 +93,19 @@
                 	<img alt='' src='assets/img-fieldtrips@2x.jpg'>
                     <div class='number-items-boxes--mobile'>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>125</div>
-                            <div class='copy--20--futura'>sessions</div>
-                        </div>
-                        <div class='number-items-box'>
-                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--big--numbers'>2060</div>
                             <div class='copy--20--futura'>students</div>
                         </div>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--big--numbers'>78</div>
+                            <div class='copy--20--futura'>field trips</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>51</div>
                             <div class='copy--20--futura'>schools</div>
                         </div>
                     </div>
-                	<p class='copy--16--bookmania'>During the school year, mornings at 826CHI are boisterous with visiting classrooms eager to create their own books. Our Field Trips expose students to the endless possibilities of creative writing, all while providing teachers with resources to bring our innovative pedagogy back to the classroom. Each Field Trip focuses on plot, character development, and writing with details. In 2016-2017 we welcomed nearly 80 classes of students from 1st through 12th grade. We offered three unique Field Trips: Storytelling &amp; Bookmaking, Images &amp; Imagination, and Memoir Writing each focused on building plot and rich description within a story. Storytelling &amp; Bookmaking remains our most popular field trip, with students taking home their very own bound books. Some choice titles from our trips this year were Mr. Monkey and His Dance Problem, The Adventures of Cheese Dude and Gramburger and I Remember...The Big Cannonball Splash.</p>
+                	<p class='copy--16--bookmania'>During the school year, mornings at 826CHI are boisterous with visiting classrooms eager to create their own books. Our Field Trips expose students to the endless possibilities of creative writing, all while providing teachers with resources to bring our innovative pedagogy back to the classroom. Each Field Trip focuses on plot, character development, and writing with details. In 2016-2017, we welcomed nearly 80 classes of students from 1st through 12th grade. We offered four unique Field Trips: Storytelling &amp; Bookmaking, Small Group Bookmaking, Images &amp; Imagination, and Memoir Writing, each focused on building plot and rich description within a story. Storytelling &amp; Bookmaking remains our most popular field trip, with students taking home their very own bound books. Some choice titles from our trips this year were <i>Mr. Monkey and His Dance Problem</i>, <i>The Adventures of Cheese Dude and Gramburger</i> and <i>I Remember &hellip; The Big Cannonball Splash</i>.</p>
                 </div>
                 	<blockquote class='text--green w557'>
                 		<p class='copy--20--futura text--green'>“You and your volunteers did a fantastic job, my students had such a great time and their love of writing is fully invigorated thanks to the enthusiasm and engagement of 826!”</p>
@@ -127,19 +133,19 @@
                 	<img alt='' src='assets/img-workshops@2x.jpg'>
                     <div class='number-items-boxes--mobile'>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--big--numbers copy--big--numbers--startswithone'>123</div>
                             <div class='copy--20--futura'>sessions</div>
                         </div>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--big--numbers'>247</div>
                             <div class='copy--20--futura'>students</div>
                         </div>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>21</div>
-                            <div class='copy--20--futura'>schools</div>
+                            <div class='copy--big--numbers'>22</div>
+                            <div class='copy--20--futura'>workshops</div>
                         </div>
                     </div>
-                	<p class='copy--16--bookmania'>Coding, podcast-making and playwriting only skim the surface of our workshops. Each semester, dozens of 826CHI volunteers propose and teach workshops to 1-12th graders that go beyond the typical English class. Workshops explores the intersections of writing with other disciplines, teaching students that crafting compelling narratives is an essential element for future success in any field.  826CHI staff and volunteers led 22 workshops in 2016-2017. Highlights of the year include a cross-generational poetry workshop led by 826CHI staff and the UChicago Writers’ Studio.</p>
+                	<p class='copy--16--bookmania'>Coding, podcast-making and playwriting only skim the surface of our workshops. Each semester, dozens of 826CHI volunteers propose and teach workshops to 1-12th graders that go beyond the typical English class. Workshops explore the intersections of writing with other disciplines, teaching students that crafting compelling narratives is an essential element for future success in any field. 826CHI staff and volunteers led 22 workshops in 2016-2017. Highlights of the year include a cross-generational poetry workshop led by 826CHI staff and the UChicago Writers’ Studio.</p>
                 </div>
                 	<blockquote class='text--green w557'>
                 		<p class='copy--20--futura text--green'>“My favorite [moment] was probably the first time we ever met, when I suddenly realized I had found other teens who really liked to write and thought that was really cool.”</p>
@@ -167,15 +173,15 @@
                 	<img alt='' src='assets/img-inschools@2x.jpg'>
                     <div class='number-items-boxes--mobile'>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>125</div>
-                            <div class='copy--20--futura'>sessions</div>
-                        </div>
-                        <div class='number-items-box'>
-                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--big--numbers copy--big--numbers--startswithone'>153</div>
                             <div class='copy--20--futura'>students</div>
                         </div>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--big--numbers'>59</div>
+                            <div class='copy--20--futura'>sessions</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>4</div>
                             <div class='copy--20--futura'>schools</div>
                         </div>
                     </div>
@@ -206,19 +212,19 @@
                 	<img alt='' src='assets/img-publishing@2x.jpg'>
                     <div class='number-items-boxes--mobile'>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>125</div>
-                            <div class='copy--20--futura'>sessions</div>
+                            <div class='copy--big--numbers'>99</div>
+                            <div class='copy--20--futura'>unique titles</div>
                         </div>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>48</div>
-                            <div class='copy--20--futura'>students</div>
+                            <div class='copy--big--numbers'>2</div>
+                            <div class='copy--20--futura'>professionally-bound<br>compendium</div>
                         </div>
                         <div class='number-items-box'>
-                            <div class='copy--big--numbers'>21</div>
-                            <div class='copy--20--futura'>schools</div>
+                            <div class='copy--big--numbers copy--big--numbers--startswithone'>1</div>
+                            <div class='copy--20--futura'>award-winning<br>compendium</div>
                         </div>
                     </div>
-                	<p class='copy--16--bookmania'>Publishing is a core tenet of all our programs—we teach students ages 6 to 18 invaluable writing skills while boosting their sense of self-efficacy through publication.  By publishing our young authors’ work, we aim to foster confidence levels, determination, and the perceived ability to succeed in other areas of life. The rate at which 826CHI publishes student writing remains unmatched. This year we printed 40% more publications than last year. That means 40% more binding, stapling, copyediting, designing, hair-wringing and ultimately, pride for our students! We couldn’t have done it without the help of our Design Cohort and our brand-new Editing Cohort. The larger world is also noticing our students’ stories. P.S. You Sound Like Someone I Can Trust received local and national press coverage. And Compendium, Volume 5 won a whopping 4 Awards from PubWest and National Indie Excellence Book Awards!</p>
+                	<p class='copy--16--bookmania'>Publishing is a core tenet of all our programs&mdash;we teach students ages 6 to 18 invaluable writing skills while boosting their sense of self-efficacy through publication. By publishing our young authors’ work, we aim to foster confidence levels, determination, and the perceived ability to succeed in other areas of life. The rate at which 826CHI publishes student writing remains unmatched. This year we printed 40% more publications than last year. That means 40% more binding, stapling, copy editing, designing, hair-wringing and ultimately, pride for our students! We couldn’t have done it without the help of our Design Cohort and our brand-new Editing Cohort. The greater world is also noticing our students’ stories. <i>P.S. You Sound Like Someone I Can Trust</i> received local and national press coverage, while <i>Compendium, Volume 5</i> won a whopping 4 Awards from PubWest and National Indie Excellence Book Awards.</p>
                 </div>
                 	<blockquote class='text--green w557'>
                 		<p class='copy--20--futura text--green'>"It feels awesome [to be published]! I feel like I've done a good job by writing my story that not only has a lot of meaning to me, but also to all of those Mexican immigrants that I am representing.”</p>
