--- a/letter.html
+++ b/letter.html
@@ -69,7 +69,7 @@
                     <a class='border-link copy--20--bebas' href='#' target='_blank'>VOLUNTEER</a>
                 </div>
             </div>
-            <a id='_826link-2' href='index.html' target='_blank'></a>
+            <a id='_826link-2' href='index.html'></a>
             <p class='copy--20--futura'>copyright 2017</p>
         </footer>
     </body>
