--- a/financials.html
+++ b/financials.html
@@ -29,20 +29,14 @@
         <main>
             <img alt='' class='shrinkable' id='title__financials' src='assets/financials@2x.png'>
             <p class='copy--20--futura w506'>The 826CHI fiscal year starts on July 1st. This report covers our activities from July 1st, 2016 through June 30th, 2017.</p>
-            <figure>
-                <img alt='' src=''>
-                <figcaption>
-                    <p class='copy--16--bookmania'>FIG 1</p>
-                    <p class='copy--20--futura'>This is a pie chart</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img alt='' src=''>
-                <figcaption>
-                    <p class='copy--16--bookmania'>FIG 2</p>
-                    <p class='copy--20--futura'>This is a pie chart</p>
-                </figcaption>
-            </figure>
+            <section id='revenue'>
+                <h2>2017<br>REVENUE</h2>
+                <img alt='revenue pie chart' class='pie-chart' src='assets/chart-revenue@2x.png'>
+            </section>
+            <section id='expenses'>
+                <h2>2017<br>EXPENSES</h2>
+                <img alt='expenses pie chart' class='pie-chart' src='assets/chart-expenses@2x.png'>
+            </section>
         </main>
 
         <footer>
@@ -68,7 +62,7 @@
                     <a class='border-link copy--20--bebas' href='#' target='_blank'>VOLUNTEER</a>
                 </div>
             </div>
-            <a id='_826link-2' href='index.html' target='_blank'></a>
+            <a id='_826link-2' href='index.html'></a>
             <p class='copy--20--futura' id='copyright'>copyright 2017</p>
         </footer>
     </body>
