about to do some column madness

--- a/index.html
+++ b/index.html
@@ -27,15 +27,31 @@
         </header>
 
         <main>
-            <div id='hp-grid__wrap'>
-                <img alt='' id='hp-grid-1' src='assets/hpimg-1@2x.png'>
-                <img alt='' id='hp-grid-2' src='assets/hpimg-2@2x.png'>
-                <img alt='' id='hp-grid-3' src='assets/hpimg-3@2x.png'>
-                <img alt='' id='hp-grid-4' src='assets/hpimg-4@2x.png'>
-                <img alt='' id='hp-grid-5' src='assets/hpimg-5@2x.png'>
-                <img alt='' id='hp-grid-6' src='assets/hpimg-6@2x.png'>
-                <img alt='' id='hp-grid-7' src='assets/hpimg-7@2x.png'>
-                <img alt='' id='hp-grid-8' src='assets/hpimg-8@2x.png'>
+            <div class='hp-grid__wrap hp-grid__wrap--desktop'>
+                <img alt='' class='hp-grid-1' src='assets/hpimg-1@2x.png'>
+                <img alt='' class='hp-grid-2' src='assets/hpimg-2@2x.png'>
+                <img alt='' class='hp-grid-3' src='assets/hpimg-3@2x.png'>
+                <img alt='' class='hp-grid-4' src='assets/hpimg-4@2x.png'>
+                <img alt='' class='hp-grid-5' src='assets/hpimg-5@2x.png'>
+                <img alt='' class='hp-grid-6' src='assets/hpimg-6@2x.png'>
+                <img alt='' class='hp-grid-7' src='assets/hpimg-7@2x.png'>
+                <img alt='' class='hp-grid-8' src='assets/hpimg-8@2x.png'>
+            </div>
+            <div class='hp-grid__wrap hp-grid__wrap--mobile'>
+              <div>
+                <img alt='' class='hp-grid-1' src='assets/hpimg-1@2x.png'>
+                <img alt='' class='hp-grid-2' src='assets/hpimg-2@2x.png'>
+                <img alt='' class='hp-grid-3' src='assets/hpimg-3@2x.png'>
+                <img alt='' class='hp-grid-4' src='assets/hpimg-4@2x.png'>
+              </div>
+              <div><p>826CHI is a non-profit organization dedicated to supporting students ages 6 to 18 with their creative + expository writing skills, and to helping teachers inspire their students to write.</p>
+              </div>
+              <div>
+                <img alt='' class='hp-grid-5' src='assets/hpimg-5@2x.png'>
+                <img alt='' class='hp-grid-6' src='assets/hpimg-6@2x.png'>
+                <img alt='' class='hp-grid-7' src='assets/hpimg-7@2x.png'>
+                <img alt='' class='hp-grid-8' src='assets/hpimg-8@2x.png'>
+              </div>
             </div>
             <div id='mission' class='shrinkable'>
                     <img alt='' src='assets/mission@2x.png'>
