--- a/letter.html
+++ b/letter.html
@@ -30,7 +30,7 @@
             <img alt='' id='letter-from-kendra' src='assets/letterfromkendra@2x.png'>
             <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.png' srcset='assets/img-letter.png 689w, assets/img-letter@2x.png 1378w'>
 
-            <h5 class='copy--20--bebas shrinkable'>LAST YEAR, WE PLANNED. THIS YEAR, WE EXECUTED.</h5>
+            <h5 class='copy--20--bebas shrinkable'>LAST YEAR, WE PLANNED. THIS YEAR, WE ACTUALIZED.</h5>
             <div class='w666'>
                 <p class='copy--20--futura'>As we move through our second decade, 826CHI is guided by the vision set forth in our 2020 strategic plan. After months of visioning, dreaming, and many rounds of revision, we are confident that this three-year plan will lead 826CHI forward, amplifying Chicago’s bright young voices in neighborhoods across our great city.</p>
                 <p class='copy--20--futura'>The political climate of the year has had a profound effect on the work that we do and the communities we serve. In the midst of political upheaval, Chicago Public Schools had its own troubles. Millions of dollars in budget cuts were announced at the beginning and middle of the school year. These events made us reexamine the ways we can support Chicago students.</p>
