--- a/team.html
+++ b/team.html
@@ -31,62 +31,67 @@
             <div id='team-members'>
                 <div class='team-members__member'>
                     <img alt='' src='assets/sankhya@2x.png'>
-                    <span class='copy--20--bebas'>SANKHYA AMARVADI</span><br>
+                    <span class='copy--20--bebas'>SANKHYA AMARVADI</span>
                     <span class='copy--16--bookmania'>Data Coordinator</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/kendra@2x.png'>
-                    <span class='copy--20--bebas'>KENDRA CHURRY-KHANNA</span><br>
+                    <span class='copy--20--bebas'>KENDRA CHURRY-KHANNA</span>
                     <span class='copy--16--bookmania'>Executive Director</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/ola@2x.png'>
-                    <span class='copy--20--bebas'>OLA FALETI</span><br>
+                    <span class='copy--20--bebas'>OLA FALETI</span>
                     <span class='copy--16--bookmania'>Development Coordinator</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/gaby@2x.png'>
-                    <span class='copy--20--bebas'>GABY FEBLAND</span><br>
+                    <span class='copy--20--bebas'>GABY FEBLAND</span>
                     <span class='copy--16--bookmania'>Creative Retail Coordinator</span>
                 </div>
                 <div class='team-members__member'>
+                    <img alt='' src='assets/waringa.png'>
+                    <span class='copy--20--bebas'>WARINGA HUNJA</span>
+                    <span class='copy--16--bookmania'>Publications Coordinator</span>
+                </div>
+                <div class='team-members__member'>
                     <img alt='' src='assets/melissa@2x.png'>
-                    <span class='copy--20--bebas'>MELISSA KIRK</span><br>
+                    <span class='copy--20--bebas'>MELISSA KIRK</span>
                     <span class='copy--16--bookmania'>Volunteer Coordinator</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/sarah@2x.png'>
-                    <span class='copy--20--bebas'>SARAH KOKERNOT</span><br>
-                    <span class='copy--16--bookmania'>Program Coordinator</span>
+                    <span class='copy--20--bebas'>SARAH KOKERNOT</span>
+                    <span class='copy--16--bookmania'>Program Manager</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/david@2x.png'>
-                    <span class='copy--20--bebas'>DAVID PINTOR</span><br>
+                    <span class='copy--20--bebas'>DAVID PINTOR</span>
                     <span class='copy--16--bookmania'>Volunteer Manager</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/jane@2x.png'>
-                    <span class='copy--20--bebas'>JANE SERENSKA</span><br>
+                    <span class='copy--20--bebas'>JANE SERENSKA</span>
                     <span class='copy--16--bookmania'>Communications Coordinator</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/molly@2x.png'>
-                    <span class='copy--20--bebas'>MOLLY SPRAYREGEN</span><br>
+                    <span class='copy--20--bebas'>MOLLY SPRAYREGEN</span>
                     <span class='copy--16--bookmania'>Program Coordinator</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/tyler@2x.png'>
-                    <span class='copy--20--bebas'>TYLER STOLTENBERG</span><br>
+                    <span class='copy--20--bebas'>TYLER STOLTENBERG</span>
                     <span class='copy--16--bookmania'>Operations Manager</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/stein@2x.png'>
-                    <span class='copy--20--bebas'>STEIN VAN DER PLOEG</span><br>
+                    <span class='copy--20--bebas'>STEIN VAN DER PLOEG</span>
                     <span class='copy--16--bookmania'>Director of Development</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/maria@2x.png'>
-                    <span class='copy--20--bebas'>MARIA VILLARREAL</span><br>
+                    <span class='copy--20--bebas'>MARIA VILLARREAL</span>
                     <span class='copy--16--bookmania'>Director of Programs</span>
                 </div>
             </div>
