--- a/financials.html
+++ b/financials.html
@@ -32,10 +32,12 @@
             <section id='revenue'>
                 <h2>2017<br>REVENUE</h2>
                 <img alt='revenue pie chart' class='pie-chart' src='assets/chart-revenue@2x.png'>
+                <h5 class='copy--20--bebas'>TOTAL: <span class='copy--20--futura'>$661,329</span></h5>
             </section>
             <section id='expenses'>
                 <h2>2017<br>EXPENSES</h2>
                 <img alt='expenses pie chart' class='pie-chart' src='assets/chart-expenses@2x.png'>
+                <h5 class='copy--20--bebas'>TOTAL: <span class='copy--20--futura'>$558,832</span></h5>
             </section>
         </main>
 
