--- a/supporters.html
+++ b/supporters.html
@@ -28,6 +28,10 @@
 
         <main>
             <img alt='' class='shrinkable' id='title__supporters' src='assets/supporters@2x.png'>
+            <blockquote class='w557'>
+              <p class='copy--20--futura'>“As an educator, writer and first-generation college student, the incredible work your organization is doing hits close to home. Thank you for being a fierce and unwavering light in an often dark and cloudy world.”</p>
+              <cite>– Rozina, Chimera Reading Series, donor​</cite>
+            </blockquote>
             <div id='volunteer-committees' class='shrinkable'>
                     <h2>VOLUNTEER<br>COMMITTEES</h2>
                     <ul>
