--- a/programs.html
+++ b/programs.html
@@ -65,16 +65,16 @@
                             <div class='copy--20--futura'>schools</div>
                         </div>
                     </div>
-                	<p class='copy--16--bookmania'>From September to June, afternoons at our writing center are filled with students prepared to dive into writing prompts, finish their homework, and do some hula-hooping as a reward. Our faithful cohort of tutors are always on hand to help students with math homework and help them revise their writing. We launched the second year of our Speakers and Snacks program, where guests attend 45-minute Q&amp;A session from our students about their professions. Speakers this year included a sports commentator, professor, and dog trainer. This year ASTW published two chapbooks and one audio project, all of which had individual community readings. For the final chapbook release, we were thrilled to integrate physical movement into the students’ readings, courtesy of a partnership with the Dancers Awareness Project (DAP).</p>
+                	<p class='copy--16--bookmania'>From September to June, afternoons at our writing center are filled with students prepared to dive into writing prompts, finish their homework, and do some hula-hooping as a reward. Our faithful cohort of tutors are always on hand to help students with math homework and help them revise their writing. We launched the second year of our Speakers and Snacks program, where guests attend a 45-minute Q&amp;A session from our students about their professions. Speakers this year included a sports commentator, professor, and dog trainer. This year ASTW published two chapbooks and one audio project, all of which had individual community readings. For the final chapbook release, we were thrilled to integrate physical movement into the students’ readings, courtesy of a partnership with the Dancers Awareness Project (DAP).</p>
                 </div>
                 <blockquote class='text--green w557'>
                 	<p class='copy--20--futura text--green'>“826 provides my children exposure to a different demographic where they meet new friends (and get to socialize also) from different backgrounds and practice writing skills in a fun way.”</p>
-                	<cite>– Theresa, After School Tutoring &amp; Writing parent</cite>
+                	<cite>– Theresa, After-School Tutoring &amp; Writing parent</cite>
                 </blockquote>
             </section>
             <section class='programs__program' id='fieldtrips'>
             	<img alt='' class='programs__program__title shrinkable' src='assets/fieldtrips@2x.png'>
-            	<p class='copy--20--futura text--green w570 programs__program__statistic'>98% of teachers say this experience has given them new ideas on how to approach writing in the classroom.</p>
+            	<p class='copy--20--futura text--green w570 programs__program__statistic'>98% of teachers said this experience has given them new ideas on how to approach writing in the classroom.</p>
             	<div class='number-items-boxes'>
             		<div class='number-items-box'>
 	            		<div class='copy--big--numbers'>2060</div>
@@ -145,7 +145,7 @@
                             <div class='copy--20--futura'>workshops</div>
                         </div>
                     </div>
-                	<p class='copy--16--bookmania'>Coding, podcast-making and playwriting only skim the surface of our workshops. Each semester, dozens of 826CHI volunteers propose and teach workshops to 1-12th graders that go beyond the typical English class. Workshops explore the intersections of writing with other disciplines, teaching students that crafting compelling narratives is an essential element for future success in any field. 826CHI staff and volunteers led 22 workshops in 2016-2017. Highlights of the year include a cross-generational poetry workshop led by 826CHI staff and the UChicago Writers’ Studio.</p>
+                	<p class='copy--16--bookmania'>Coding, podcast-making and playwriting only skim the surface of our workshops. Each semester, dozens of 826CHI volunteers propose and teach workshops to 1-12th graders that go beyond the typical English class. Workshops explore the intersection of writing with other disciplines, teaching students that crafting compelling narratives is an essential element for future success in any field. 826CHI staff and volunteers led 22 workshops in 2016-2017. Highlights of the year include a cross-generational poetry workshop led by 826CHI staff and the UChicago Writers’ Studio.</p>
                 </div>
                 	<blockquote class='text--green w557'>
                 		<p class='copy--20--futura text--green'>“My favorite [moment] was probably the first time we ever met, when I suddenly realized I had found other teens who really liked to write and thought that was really cool.”</p>
