--- a/supporters.html
+++ b/supporters.html
@@ -49,7 +49,7 @@
             <section class='list-section'>
                 <h2>$50K</h2>
                 <ul>
-                    <li>Caerus Foundation</li>
+                    <li>Caerus Foundation, Inc.</li>
                 </ul>
             </section>
             <section class='list-section' id='tenk'>
