--- a/team.html
+++ b/team.html
@@ -118,9 +118,9 @@
                         <span class='copy--16--bookmania'>Program Coordinator</span></li>
                         <li><p class='copy--20--futura'>Tyler Stoltenberg</p>
                         <span class='copy--16--bookmania'>Operations Manager</span></li>
+                        <li><p class='copy--20--futura'>Stien van der Ploeg</p>
                         <li><p class='copy--20--futura'>Maria Villarreal</p>
                         <span class='copy--16--bookmania'>Director of Programs</span></li>
-                        <li><p class='copy--20--futura'>Stien van der Ploeg</p>
                         <span class='copy--16--bookmania'>Director of Development</span></li>
                         <li><p class='copy--20--futura'>Tracy Woodley</p>
                         <span class='copy--16--bookmania'>Development Coordinator</span></li>
@@ -131,7 +131,7 @@
                 <h2>2016-17<br>BOARD OF DIRECTORS</h2>
                 <ul class='spacey'>
                         <li><p class='copy--20--futura'>Hilary Hodge</p>
-                        <span class='copy--16--bookmania'>President</span></li>
+                        <span class='copy--16--bookmania'>President (Emeritus)</span></li>
                         <li><p class='copy--20--futura'>Anthony Malcoun</p>
                         <span class='copy--16--bookmania'>Vice-President</span></li>
                         <li><p class='copy--20--futura'>Sameer Gadkaree</p>
