updated README, bug fixes

--- a/programs.html
+++ b/programs.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>826CHI 2017 Annual Report</title>
+        <title>826CHI 2017 Annual Report - Programs</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -29,7 +29,7 @@
         <main>
         	<div class='bg--blue'>
         		<img alt='' class='shrinkable' id='title__programs' src='assets/programs@2x.png'>
-            	<p class='copy--20--futura w666'>826CHI offers free, year-round distinctive writing programs for Chicago students. Our After-School Tutoring &amp; Writing, Field Trips, Workshops and In-Schools programs engaged 2,507 students from 53 zip codes across the city. We are committed to bridging gaps in access to high-quality art education across Chicago by prioritizing English language learners and students attending under-resourced schools. We believe that all students should have the opportunity to gain new insights and confidence in the power of their voices.</p>
+            	<p class='copy--20--futura w666'>826CHI offers free, year-round distinctive writing programs for Chicago students. Our After-School Tutoring &amp; Writing, Field Trips, Workshops and In-Schools programs engaged 2,507 students from 53 zipcodes across the city. We are committed to bridging gaps in access to high-quality art education across Chicago by prioritizing English language learners and students attending under-resourced schools. We believe that all students should have the opportunity to gain new insights and confidence in the power of their voices.</p>
             </div>
             <section class='programs__program' id='astw'>
             	<img alt='' class='programs__program__title shrinkable' src='assets/astw@2x.png'>
