added typekit style tags, removed all font-face and references to font-family

--- a/team.html
+++ b/team.html
@@ -14,8 +14,11 @@
         <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
         <meta name="theme-color" content="#ffffff">
 
+        <style>
+          @import url(“https://use.typekit.net/cfc0zzt.css“);
+        </style>
         <link rel="stylesheet" href="style/normalize.css">
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/style_autoprefixed.css ">
     </head>
     <body>
         <!--[if lte IE 9]>
