replaced smartquotes in link tags

--- a/programs.html
+++ b/programs.html
@@ -14,7 +14,7 @@
         <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel=“stylesheet” href=“https://use.typekit.net/cfc0zzt.css“>
+        <link rel="stylesheet" href="https://use.typekit.net/cfc0zzt.css">
         <link rel="stylesheet" href="style/normalize.css">
         <link rel="stylesheet" href="style/style_autoprefixed.css">
     </head>
@@ -69,7 +69,7 @@
                 	<p class='copy--16--bookmania'>From September to June, afternoons at our writing center are filled with students prepared to dive into writing prompts, finish their homework, and do some hula-hooping as a reward. Our faithful cohort of tutors are always on hand to help students with math homework and help them revise their writing. We launched the second year of our Speakers and Snacks program, where guests attend a 45-minute Q&amp;A session from our students about their professions. Speakers this year included a sports commentator, professor, and dog trainer. This year ASTW published two chapbooks and one audio project, all of which had individual community readings. For the final chapbook release, we were thrilled to integrate physical movement into the students’ readings, courtesy of a partnership with the Dancers Awareness Project (DAP).</p>
                 </div>
                 <blockquote class='text--green w557'>
-                	<p class='copy--20--futura text--green'>“826 provides my children exposure to a different demographic where they meet new friends (and get to socialize also) from different backgrounds and practice writing skills in a fun way.”</p>
+                	<p class='copy--20--futura text--green'>"826 provides my children exposure to a different demographic where they meet new friends (and get to socialize also) from different backgrounds and practice writing skills in a fun way."</p>
                 	<cite>– Theresa, After-School Tutoring &amp; Writing parent</cite>
                 </blockquote>
             </section>
@@ -109,7 +109,7 @@
                 	<p class='copy--16--bookmania'>During the school year, mornings at 826CHI are boisterous with visiting classrooms eager to create their own books. Our Field Trips expose students to the endless possibilities of creative writing, all while providing teachers with resources to bring our innovative pedagogy back to the classroom. Each Field Trip focuses on plot, character development, and writing with details. In 2016-2017, we welcomed nearly 80 classes of students from 1st through 12th grade. We offered four unique Field Trips: Storytelling &amp; Bookmaking, Small Group Bookmaking, Images &amp; Imagination, and Memoir Writing, each focused on building plot and rich description within a story. Storytelling &amp; Bookmaking remains our most popular field trip, with students taking home their very own bound books. Some choice titles from our trips this year were <i>Mr. Monkey and His Dance Problem</i>, <i>The Adventures of Cheese Dude and Gramburger</i> and <i>I Remember &hellip; The Big Cannonball Splash</i>.</p>
                 </div>
                 	<blockquote class='text--green w557'>
-                		<p class='copy--20--futura text--green'>“You and your volunteers did a fantastic job, my students had such a great time and their love of writing is fully invigorated thanks to the enthusiasm and engagement of 826!”</p>
+                		<p class='copy--20--futura text--green'>"You and your volunteers did a fantastic job, my students had such a great time and their love of writing is fully invigorated thanks to the enthusiasm and engagement of 826!"</p>
                 		<cite>– Jonathan, Teacher at Drummond Montessori</cite>
                 	</blockquote>
             </section>
@@ -149,7 +149,7 @@
                 	<p class='copy--16--bookmania'>Coding, podcast-making and playwriting only skim the surface of our workshops. Each semester, dozens of 826CHI volunteers propose and teach workshops to 1-12th graders that go beyond the typical English class. Workshops explore the intersection of writing with other disciplines, teaching students that crafting compelling narratives is an essential element for future success in any field. 826CHI staff and volunteers led 22 workshops in 2016-2017. Highlights of the year include a cross-generational poetry workshop led by 826CHI staff and the UChicago Writers’ Studio.</p>
                 </div>
                 	<blockquote class='text--green w557'>
-                		<p class='copy--20--futura text--green'>“My favorite [moment] was probably the first time we ever met, when I suddenly realized I had found other teens who really liked to write and thought that was really cool.”</p>
+                		<p class='copy--20--futura text--green'>"My favorite [moment] was probably the first time we ever met, when I suddenly realized I had found other teens who really liked to write and thought that was really cool."</p>
                 		<cite>– London, 9th grade, Teen Writers Studio student</cite>
                 	</blockquote>
             </section>
@@ -189,7 +189,7 @@
                 	<p class='copy--16--bookmania'>Every year 826CHI partners with local schools to provide classrooms with individualized, in-depth attention. Program staff work with classroom teachers to create curriculum that inspires, challenges and engages students. In 2016-2017 826CHI worked with four public schools. We facilitated a memoir-writing project at Prieto Elementary and continued our Digital Tutoring program at A.N. Pritzker School. Students from the other two schools—Emiliano Zapata Elementary and Roald Amundsen High School—maintained a year-long letter correspondence. These letters are documented in our Young Authors Book Project for the year, <i>PS: You Sound Like Someone I Can Trust</i>. A public reading in June gave students the chance to meet their letter-writing partners in person, for the very first time.</p>
                 </div>
                 	<blockquote class='text--green w557'>
-                		<p class='copy--20--futura text--green'>“I learned to find out who I am.”</p>
+                		<p class='copy--20--futura text--green'>"I learned to find out who I am."</p>
                 		<cite>– Kunjame, 9th Grade, Amundsen HS</cite>
                 	</blockquote>
             </section>
@@ -228,7 +228,7 @@
                 	<p class='copy--16--bookmania'>Publishing is a core tenet of all our programs&mdash;by publishing our young authors’ work, we aim to foster their confidence, determination, and self-efficacy. No other organization publishes student writing at 826CHI’s rate; this year we printed 40% more publications. That means 40% more binding, stapling, copy editing, designing, hair-wringing and ultimately, pride for our students! We couldn’t have done it without the help of our Design Cohort and our brand-new Editing Cohort. The greater world is also noticing our students’ stories. <i>P.S. You Sound Like Someone I Can Trust</i> received local and national press coverage, while <i>Compendium, Volume 5</i> won a whopping 4 Awards from PubWest and National Indie Excellence Book Awards.</p>
                 </div>
                 	<blockquote class='text--green w557'>
-                		<p class='copy--20--futura text--green'>"It feels awesome [to be published]! I feel like I've done a good job by writing my story that not only has a lot of meaning to me, but also to all of those Mexican immigrants that I am representing.”</p>
+                		<p class='copy--20--futura text--green'>"It feels awesome [to be published]! I feel like I've done a good job by writing my story that not only has a lot of meaning to me, but also to all of those Mexican immigrants that I am representing."</p>
                 		<cite>– Cithlaly, 8th Grade, Emiliano Zapata Academy</cite>
                 	</blockquote>
             </section>
