--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
         <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel=“stylesheet” href=“https://use.typekit.net/cfc0zzt.css“>
+        <link rel="stylesheet" href="https://use.typekit.net/cfc0zzt.css">
         <link rel="stylesheet" href="style/normalize.css">
         <link rel="stylesheet" href="style/style_autoprefixed.css ">
     </head>
