fixed footer links

--- a/students.html
+++ b/students.html
@@ -66,13 +66,13 @@
             <p class='copy--20--futura'>thanks, and see you next year!</p>
             <div class='link-row'>
                 <div class='link-row__box'>
-                    <a class='border-link copy--20--bebas' href='#' target='_blank'>INFO@826CHI.ORG</a>
+                    <a class='border-link copy--20--bebas' href='mailto:info@826chi.org' target='_blank'>INFO@826CHI.ORG</a>
                 </div>
                 <div class='link-row__box'>
-                    <a class='border-link copy--20--bebas' href='#' target='_blank'>DONATE</a>
+                    <a class='border-link copy--20--bebas' href='http://www.826chi.org/donate/' target='_blank'>DONATE</a>
                 </div>
                 <div class='link-row__box'>
-                    <a class='border-link copy--20--bebas' href='#' target='_blank'>VOLUNTEER</a>
+                    <a class='border-link copy--20--bebas' href='http://www.826chi.org/get_involved/volunteer/' target='_blank'>VOLUNTEER</a>
                 </div>
             </div>
             <a id='_826link-2' href='index.html'></a>
