fix copy errors on team page

--- a/team.html
+++ b/team.html
@@ -32,12 +32,12 @@
             <div id='team-members'>
                 <div class='team-members__member'>
                     <img alt='' src='assets/sankhya@2x.png'>
-                    <span class='copy--20--bebas'>SANKHYA AMARVADI</span>
+                    <span class='copy--20--bebas'>SANKHYA AMARAVADI</span>
                     <span class='copy--16--bookmania'>Data Coordinator</span>
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/kendra@2x.png'>
-                    <span class='copy--20--bebas'>KENDRA CHURRY-KHANNA</span>
+                    <span class='copy--20--bebas'>KENDRA CURRY-KHANNA</span>
                     <span class='copy--16--bookmania'>Executive Director</span>
                 </div>
                 <div class='team-members__member'>
@@ -87,7 +87,7 @@
                 </div>
                 <div class='team-members__member'>
                     <img alt='' src='assets/stein@2x.png'>
-                    <span class='copy--20--bebas'>STEIN VAN DER PLOEG</span>
+                    <span class='copy--20--bebas'>STIEN VAN DER PLOEG</span>
                     <span class='copy--16--bookmania'>Director of Development</span>
                 </div>
                 <div class='team-members__member'>
@@ -120,9 +120,9 @@
                         <li><p class='copy--20--futura'>Tyler Stoltenberg</p>
                         <span class='copy--16--bookmania'>Operations Manager</span></li>
                         <li><p class='copy--20--futura'>Stien van der Ploeg</p>
+                        <span class='copy--16--bookmania'>Director of Development</span></li>
                         <li><p class='copy--20--futura'>Maria Villarreal</p>
                         <span class='copy--16--bookmania'>Director of Programs</span></li>
-                        <span class='copy--16--bookmania'>Director of Development</span></li>
                         <li><p class='copy--20--futura'>Tracy Woodley</p>
                         <span class='copy--16--bookmania'>Development Coordinator</span></li>
                 </ul>
