--- a/financials.html
+++ b/financials.html
@@ -64,6 +64,9 @@
                 <div class='link-row__box'>
                     <a class='border-link copy--20--bebas' href='http://www.826chi.org/get_involved/volunteer/' target='_blank'>VOLUNTEER</a>
                 </div>
+                <div class='link-row__box'>
+                    <a class='border-link copy--20--bebas' href='assets/other/826Report2017.pdf' target='_blank'>DOWNLOAD PDF</a>
+                </div>
             </div>
             <a id='_826link-2' href='index.html'></a>
             <p class='copy--20--futura' id='copyright'>copyright 2017</p>
