--- a/supporters.html
+++ b/supporters.html
@@ -95,6 +95,7 @@
             <section class='list-section' id='onek'>
                 <h2>$1K+</h2>
                 <ul>
+                  <li>Anonymous</li>
                   <li>Nathan Arnold</li>
                   <li>Annie Atzeff</li>
                   <li>Oscar Guy Bargnes</li>
@@ -221,6 +222,7 @@
             <section class='list-section' id='gt-onehundred'>
                 <h2>$100+</h2>
                 <ul>
+                  <li>Anonymous</li>
                   <li>David Abatangelo</li>
                   <li>AbbVie</li>
                   <li>Ashley Albert</li>
@@ -541,6 +543,7 @@
             <section class='list-section' id='lt-onehundred'>
                 <h2>&#60;$100</h2>
                 <ul>
+                  <li>Anonymous</li>
                   <li>Nicole Adelstein</li>
                   <li>Mina Adibpour</li>
                   <li>Yvonne Afable</li>
@@ -1043,6 +1046,9 @@
                 </div>
                 <div class='link-row__box'>
                     <a class='border-link copy--20--bebas' href='http://www.826chi.org/get_involved/volunteer/' target='_blank'>VOLUNTEER</a>
+                </div>
+                <div class='link-row__box'>
+                    <a class='border-link copy--20--bebas' href='assets/other/826Report2017.pdf' target='_blank'>DOWNLOAD PDF</a>
                 </div>
             </div>
             <a id='_826link-2' href='index.html'></a>
