update sarah title

--- a/team.html
+++ b/team.html
@@ -112,7 +112,7 @@
                         <li><p class='copy--20--futura'>Marty Kezon</p>
                         <span class='copy--16--bookmania'>Volunteer Coordinator</span></li>
                         <li><p class='copy--20--futura'>Sarah Kokernot</p>
-                        <span class='copy--16--bookmania'>Program Coordinator</span></li>
+                        <span class='copy--16--bookmania'>Program Manager</span></li>
                         <li><p class='copy--20--futura'>Esther Lee</p>
                         <span class='copy--16--bookmania'>Data Coordinator</span></li>
                         <li><p class='copy--20--futura'>Molly Sprayregen</p>
