updated volunteer link

--- a/supporters.html
+++ b/supporters.html
@@ -1045,7 +1045,7 @@
                     <a class='border-link copy--20--bebas' href='http://www.826chi.org/donate/' target='_blank'>DONATE</a>
                 </div>
                 <div class='link-row__box'>
-                    <a class='border-link copy--20--bebas' href='http://www.826chi.org/get_involved/volunteer/' target='_blank'>VOLUNTEER</a>
+                    <a class='border-link copy--20--bebas' href='https://www.826chi.org/get-involved#volunteer' target='_blank'>VOLUNTEER</a>
                 </div>
                 <div class='link-row__box'>
                     <a class='border-link copy--20--bebas' href='assets/other/826Report2017.pdf' target='_blank'>DOWNLOAD PDF</a>
