fix the read the letter link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div id='mission' class='shrinkable'>
                     <img alt='' src='assets/mission@2x.png'>
-                    <a class='border-link copy--20--futura' href=''>read the letter from our executive director kendra</a>
+                    <a class='border-link copy--20--futura' href='letter.html'>read the letter from our executive director kendra</a>
             </div>
             <h5 class='copy--20--bebas'>SOME HIGHLIGHTS FROM OUR YEAR</h5>
             <div class='stats'>
